// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberGT(5) expectTypeFailure(1): TYPE_FAILURE::NumberGT(1) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": "1",
      "expected": [Function],
      "message": "Invalid value \\"1\\" supplied to Number",
      "path": Array [],
    },
  ],
  "value": "1",
}
`;

exports[`NumberGT(5) expectTypeFailure(4): TYPE_FAILURE::NumberGT(4) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": 4,
      "expected": [Function],
      "message": "Invalid value 4 supplied to NumberGT",
      "path": Array [],
    },
  ],
  "value": 4,
}
`;

exports[`NumberGT(5) expectTypeFailure(5): TYPE_FAILURE::NumberGT(5) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": 5,
      "expected": [Function],
      "message": "Invalid value 5 supplied to NumberGT",
      "path": Array [],
    },
  ],
  "value": 5,
}
`;
